objects/HealthCloudGA__EhrDosageInstruction__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__AdditionalInstructionCode__c</fullName>
        <label>Additional Instruction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AdditionalInstructionLabel__c</fullName>
        <label>Additional Instruction Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AdditionalInstructionSystem__c</fullName>
        <label>Additional Instruction System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AdditionalInstruction__c</fullName>
        <label>Additional Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AsNeededCode__c</fullName>
        <description>AsNeeded Symbol in syntax defined by the system</description>
        <label>AsNeeded Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AsNeededLabel__c</fullName>
        <label>As Needed Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AsNeededSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>AsNeeded System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AsNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseQuantityUnit__c</fullName>
        <label>Dose Quantity Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseQuantityValue__c</fullName>
        <label>Dose Quantity Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EhrPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Patient this applies to</description>
        <inlineHelpText>Patient this applies to</inlineHelpText>
        <label>EHR Patient</label>
        <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
        <relationshipLabel>EHR Dosage Instructions</relationshipLabel>
        <relationshipName>EhrDosageInstructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Instruction__c</fullName>
        <label>Instruction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MaxDosePerPeriodDenominatorUnit__c</fullName>
        <label>Max Dose Per Period Denominator Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MaxDosePerPeriodDenominatorValue__c</fullName>
        <label>Max Dose Per Period Denominator Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MaxDosePerPeriodNumeratorUnit__c</fullName>
        <label>Max Dose Per Period Numerator Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MaxDosePerPeriodNumeratorValue__c</fullName>
        <label>Max Dose Per Period Numerator Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationPrescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medication Prescription</label>
        <referenceTo>HealthCloudGA__EhrMedicationPrescription__c</referenceTo>
        <relationshipLabel>Dosage Instructions</relationshipLabel>
        <relationshipName>DosageInstructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationStatement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medication Statement</label>
        <referenceTo>HealthCloudGA__EhrMedicationStatement__c</referenceTo>
        <relationshipLabel>Dosage Instructions</relationshipLabel>
        <relationshipName>DosageInstructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MethodCode__c</fullName>
        <description>Method Symbol in syntax defined by the system</description>
        <label>Method Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MethodLabel__c</fullName>
        <label>Method Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MethodSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Method System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RateDenominator__c</fullName>
        <description>Denominator of a ratio of two Quantity values - a numerator and a denominator</description>
        <inlineHelpText>Denominator of a ratio of two Quantity values - a numerator and a denominator</inlineHelpText>
        <label>Rate Denominator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RateNumerator__c</fullName>
        <description>Numerator of a ratio of two Quantity values - a numerator and a denominator</description>
        <inlineHelpText>Numerator of a ratio of two Quantity values - a numerator and a denominator</inlineHelpText>
        <label>Rate Numerator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RouteCode__c</fullName>
        <description>Route Symbol in syntax defined by the system</description>
        <label>Route Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RouteLabel__c</fullName>
        <label>Route Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RouteSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Route System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SiteCode__c</fullName>
        <description>Site Symbol in syntax defined by the system</description>
        <label>Site Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SiteLabel__c</fullName>
        <label>Site Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SiteSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Site System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SupplementalInstruction__c</fullName>
        <label>Supplemental Instruction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TimingPeriodEnd__c</fullName>
        <label>Timing Period End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TimingPeriodStart__c</fullName>
        <label>Timing Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Timing__c</fullName>
        <label>Timing</label>
        <type>DateTime</type>
    </fields>
    <label>EHR Dosage Instruction</label>
    <nameField>
        <displayFormat>Inst-{0}</displayFormat>
        <label>EHR Dosage Instruction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Dosage Instructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>